doc de ruta finalizar compra de carrito
